Add article deletion confirmation, add home page and articles landing page links

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,8 @@
 <h1>
-  Holding page
+  Home page
 </h1>
 
 <p>
-  <%= link_to 'Articles', articles_path %>
+  <%= link_to 'Articles', articles_path %> |
+  <%= link_to 'About', about_path %>
 </p>
