--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,7 @@
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 
-<body>
-<% flash.each do |name, message| %>
-  <%= message %>
-<% end %>
+<%= render 'layouts/messages' %>
 <%= yield %>
 </body>
 </html>
