--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,18 @@
-<h1>
-  Home page
-</h1>
+<div id="page-content">
+  <div class="container" id="home-container">
+    <div class="jumbotron text-center text-white">
+      <h1 class="display-4">The Blog Of Destiny</h1>
+      <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
+        featured content or information.</p>
+      <hr class="my-4">
+      <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+      <a class="btn btn-success btn-lg" href="#" role="button">Sign up!</a>
+    </div>
+  </div>
+</div>
 
-<p>
-  <%= link_to 'Articles', articles_path %> |
-  <%= link_to 'About', about_path %>
-</p>
+<footer id="sticky-footer" class="py-4 bg-dark text-white">
+  <div class="container text-center">
+    <small>Copyright &copy; Your Website</small>
+  </div>
+</footer>
