--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,6 +13,6 @@
 
 <footer id="sticky-footer" class="py-4 bg-dark text-white">
   <div class="container text-center">
-    <small>Copyright &copy; Your Website</small>
+    <small>Copyright &copy; <%= link_to 'Scott Edwards', 'https://scottedwards.tech', class: 'text-white', target: :_blank %></small>
   </div>
 </footer>
